site/src/layouts/DetailComponent/DetailComponent.module.css
.secondarySidebar {
  flex: 0 0 250px;
  display: flex;
  flex-direction: column;
  gap: var(--salt-spacing-200);
}

.tabPanel {
  margin-top: var(--salt-spacing-200);
}

.headingActions {
  margin-top: var(--salt-spacing-200);
  display: flex;
  flex-direction: row;
  gap: var(--salt-spacing-100);
}

.toggleGroup.toggleGroup {
  width: 100%;
}

.toggleGroup.toggleGroup button {
  width: unset;
  flex: 1;
}

.overlay {
  max-width: 100vw;
}

